crates/core/tests/ui/token_balance_split_cross_side.stderr
error[E0308]: mismatched types
  --> tests/ui/token_balance_split_cross_side.rs:41:28
   |
41 |         buy_token_balance: sell_source,
   |                            ^^^^^^^^^^^ expected `BuyTokenDestination`, found `SellTokenSource`

error[E0308]: mismatched types
  --> tests/ui/token_balance_split_cross_side.rs:44:42
   |
44 |     let _mismatch: BuyTokenDestination = sell_source;
   |                    -------------------   ^^^^^^^^^^^ expected `BuyTokenDestination`, found `SellTokenSource`
   |                    |
   |                    expected due to this
